# molly

./: .gitignore  Cargo.toml  README.md  benchmark.sh  hyper_benchmark.sh  many.fish  profile.json  reader.py  test.sh
benches/: bench.rs
bindings/python/: .gitignore  Cargo.toml  pyproject.toml  test.py
bindings/python/python/molly/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: verification.py
examples/: cfreader.rs  compare.rs  offsets.rs  playground.rs  read_ahead.rs  readall.rs  reader.rs  write_test_file.rs  xdrreader.rs
src/: buffer.rs  lib.rs  main.rs  reader.rs  selection.rs
tests/: ag.txt  compare.rs  home.rs  integration.rs  open.rs  selections.rs
tests/common/: mod.rs
tests/trajectories/: delinyah_tiny.xtc
