[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "molly"
version = "1.0"
dependencies = [
	"numpy",
]

[tool.setuptools.packages]
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
target = "molly._molly"
path = "Cargo.toml"
binding = "PyO3"
